<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_id">59cb6bac</string>
    <string name="app_name">MEEKUX</string>
    <string name="home_title">首页</string>
    <string name="home_control">单控</string>
    <string name="home_music">光曲</string>
    <string name="my">我的</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="yinliang"></string>
    <string name="changecolor">调色</string>
    <string name="tow_exit">再按一次退出应用</string>
    <string name="entry">立即进入</string>
    <string name="regist_login">注册/登录</string>
    <string name="myeqiu">我的设备</string>
    <string name="mywalt">我的钱包</string>
    <string name="message">我的消息</string>
    <string name="corp">版权所有 © 2017 IGOO Ltd.保留所有权利</string>
    <string name="corpnext">沪ICP备 14052640号-1</string>
    <string name="tv_light_num">灯带</string>
    <string name="wallet">卫生</string>
    <string name="walletroom">间</string>
    <string name="singlecontrol">单控</string>
    <string name="automatic">自动</string>
    <string name="manual">手动</string>
    <string name="panellights">未来商场</string>
    <string name="xiantiaolight">灯带</string>
    <string name="showroom">明狐家装</string>
    <string name="errorquickcode">验证码错误</string>
    <string name="loginPhone">手机号</string>
    <string name="loginPassword">请输入6-12位字符</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="loginButton">登录</string>
    <string name="registerButton">注册</string>
    <string name="checkPhone">请输入手机号</string>
    <string name="errorPhone">手机号不正确</string>
    <string name="checkPassword">请输入密码</string>
    <string name="inputquickCode">请输入验证码</string>
    <string name="checkPasswordString">请输入6-12位字符</string>
    <string name="regsterPhone">手机号</string>
    <string name="quckCode">验证码</string>
    <string name="getquickCode">获取验证码</string>
    <string name="requickCode">s后重新获取</string>
    <string name="passWord">密　码 </string>
    <string name="comfrimpassWord">确认密码</string>
    <string name="inputcomfrimpassWord">请输入确认密码</string>
    <string name="agreeRester">点击注册表示同意注册</string>
    <string name="thirdlogin">第三方登陆方式</string>
    <string name="logotitle">IGOO</string>
    <string name="logotitlesend">改变你们的生活方式</string>
    <string name="wexlogin">微信</string>
    <string name="qqlogin">QQ</string>
    <string name="register">注册</string>
    <string name="agreemt">用户协议</string>
    <string name="inputQuickCode">请输入验证码</string>
    <string name="finishfindback">完成</string>
    <string name="finishfindtitle">找回密码</string>
    <string name="next">下一步</string>
    <string name="inputpassword">输入密码</string>
    <string name="inputpasswordagain">再次输入密码</string>
    <string name="system_initializing">系统初始化，请稍候。</string>
    <string name="InvalidAccount">账号已注册</string>
    <string name="errorPasswords">密码错误</string>
    <string name="userNamerror">用户名错误</string>
    <string name="twopassword">两次密码不一致</string>
    <string name="modfilypasswordsuccess">恭喜找回密码</string>
    <string name="tv_light_dialog_message">一盏灯只能对应部署一个位置，长按可进行拖动更改位置</string>
    <string name="tv_light_dialog_title">温馨提示</string>
    <string name="errorfiveTimePassword">密码错误次数过多请稍等操作</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="done">完成</string>
    <string name="playlist_is_empty">无光曲列表</string>
    <string name="fast_scroll_alphabet">" ABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
    <string name="add_songlight_to_list">添加光曲到“%1$s”</string>
    <string name="add_songlight_to_favor">将光曲添加到“最爱”</string>
    <string name="set_light">设置亮度 %1$s%%</string>
    <string name="set_volume">设置音量 %1$s%%</string>
    <string name="clear_playlist">清除播放列表</string>
    <string name="delete_playlist">删除光曲列表</string>
    <string name="ok">确认</string>
    <string name="play">播放</string>
    <string name="times">时长</string>
    <string name="nums">次数</string>
    <string name="duration">时长</string>
    <string name="times_message">该光曲在光曲列表内的播放时长</string>
    <string name="nums_message">该光曲在光曲列表内的播放次数</string>
    <string name="playlist"> 播放列表</string>
    <string name="congzhi"> 请输入充值金额</string>
    <string name="edit">编辑</string>
    <string name="clear">清除</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string-array name="menuitem">
        <item>我的设备</item>
        <item>我的钱包</item>
        <item>我的消息</item>
        <item>设置</item>
    </string-array>
    <string-array name="changecolorarray">
        <item>饮食</item>
        <item>休闲</item>
        <item>阅读</item>
        <item>睡眠</item>
        <item>阅读</item>
        <item>放松</item>
        <item>冷暖</item>
        <item>运动</item>
    </string-array>
    <string-array name="text_sudoku">
        <item>爱情</item>
        <item>聚会</item>
        <item>育儿</item>
        <item>睡眠</item>
        <item>阅读</item>
        <item>教育</item>
        <item>起居</item>
        <item>音乐</item>
        <item>最爱</item>
    </string-array>
    <string-array name="text_lamptype">
        <item>落地灯</item>
        <item>台灯</item>
        <item>吸顶灯</item>

    </string-array>
    <string-array name="text_tablayout">
        <item>客厅</item>
        <item>餐厅</item>
        <item>主卧</item>
        <item>次卧</item>
        <item>厨房</item>
        <item>卫生间</item>
    </string-array>
    <string-array name="mode1_SubMode">
        <item>阅读</item>
        <item>休闲</item>
        <item>健身</item>
    </string-array>
    <string-array name="mode2_SubMode">
        <item>催眠</item>
        <item>唤醒</item>
        <item>夜灯</item>
    </string-array>
    <string-array name="mode3_SubMode">
        <item>温馨</item>
        <item>热闹</item>
    </string-array>
    <string-array name="mode4_SubMode">
        <item>胎育</item>
        <item>亲子</item>
        <item>学习</item>
    </string-array>
    <string-array name="mode5_SubMode">
        <item>优雅</item>
        <item>热烈</item>
    </string-array>
    <string-array name="Mode6_SubMode">
        <item>柔情</item>
        <item>激情</item>
    </string-array>
    <string-array name="mode7_SubMode">
        <item>歌曲</item>
        <item>乐曲</item>
    </string-array>
    <string-array name="mode8_SubMode">
        <item>情绪调节</item>
        <item>治疗</item>
    </string-array>
    <string name="mywallet">我的钱包</string>
    <string name="setting">设置</string>
    <string name="mymessage">我的消息</string>
    <string name="mydevice">我的设备</string>
    <string name="loginand">注册/登录</string>
    <string name="update">修改</string>
    <string name="setpaypwd">设置支付密码</string>
    <string name="updatepaypwd">修改支付密码</string>
    <string name="resetpaypwd">重置支付密码</string>
    <string name="recharge">充值</string>
    <string name="mygift">我的礼品</string>
    <string name="detail">明细</string>
    <string name="account_balance">账户余额</string>
    <string name="yuan">￥</string>
    <string name="yuan_chinese">元</string>
    <string name="exchange_time">兑换日期：</string>
    <string name="exchange_now">立\n即\n兑\n换</string>
    <string name="exchange_had">已\n经\n兑\n换</string>
    <string name="exchange_fail">已\n经\n失\n效</string>
    <string name="amount_money">金额</string>
    <string name="input_amount">请输入金额</string>
    <string name="choose_pay">选择充值方式</string>
    <string name="alipay">支付宝支付</string>
    <string name="wechatpay">微信支付</string>
    <string name="paypalpay">贝宝支付</string>
    <string name="confirm">确认</string>
    <string name="inputpaypwd">输入支付密码</string>
    <string name="inputpaypwd_again">再次输入支付密码</string>
    <string name="setpwd_complete">设置完成</string>
    <string name="setpwd_fail">两次密码不一致,请重新输入</string>
    <string name="phone_number">手机号</string>
    <string name="identifying_code">验证码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="reget_identifying_code">点击重新获取</string>
    <string name="next_step">下一步</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="sure">确定</string>
    <string name="find_pwd">找回密码</string>
    <string name="load">加载更多</string>
    <string name="personal_message">个人信息</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="lamp_name_update">名称修改</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="save">保存</string>
    <string name="tips">内容不能为空</string>
    <string name="tips_age">请输入正确的年龄</string>
    <string name="test_phone">400-089-8016</string>
    <string name="test_age">25</string>
    <string name="test_date">2017.03.01-201706.03</string>
    <string name="test_name">司杏</string>
    <string name="choose_avatar">请选择以下作为头像</string>
    <string name="album">从手机相册选择</string>
    <string name="photograph">拍照</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="text_loading">搜索中,请稍候...</string>
    <string name="version_update">版本更新</string>
    <string name="customer_phone">客服电话</string>
    <string name="frequently_questions">常见问题</string>
    <string name="feedback">意见反馈</string>
    <string name="share_friend">推荐给好友</string>
    <string name="logoff">退出登陆</string>
    <string name="cellphone">400-098-8016</string>
    <string name="version_name">1.0.0</string>
    <string name="wechat">微信</string>
    <string name="wechat_friends">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qqzone">QQ空间</string>
    <string name="share_to_friend">分享给好友</string>
    <string name="tips_version_update">有可用版本，是否更新</string>
    <string name="tips_feedback">感谢您给我们提出宝贵意见</string>
    <string name="tips_please_input">请输入</string>
    <string name="submit">提交</string>
    <string name="version">版本1.1</string>
    <string name="newtwrookaddress">官方网址：www.igoo.com</string>
    <string name="telephone">客服电话：400-098-8916</string>
    <string name="introduce">一款以爱情为主题的智能灯软件，为爱而生！</string>
    <string name="floor_lamp">落地灯</string>
    <string name="desk_lamp">台灯</string>
    <string name="top_lamp">吸顶灯</string>
    <string name="add_device">添加设备</string>
    <string name="search_device">搜索设备</string>
    <string name="no_search_device">没有搜索到任何设备</string>
    <string name="recent_use">最近用过的</string>
    <string name="music_lamp">音乐智能灯</string>
    <string name="love_type">IGOO Love[L3f]</string>
    <string name="contact">连接</string>
    <string name="input_wifi_pwd">请输入WIFI密码</string>
    <string name="keep_wifi_pwd">记住密码</string>
    <string name="change_wifi">切换wifi</string>
    <string name="contact_wifi">添加设备</string>
    <string name="start_bind">开始连接</string>
    <string name="deltedevice">删除</string>
    <string name="account_details">账户明细</string>
    <string name="tips_wifi">请您确认当前的WIFI或使用其他WIFI绑定</string>
    <string name="tips_wifi_empty">wifi密码不能为空</string>
    <string name="tips_search">正在搜索设备</string>
    <string name="tips_listen">请确认您的设备处于监听状态</string>
    <string name="complete">完成</string>
    <string name="contact_success">连接成功</string>
    <string name="tips_contact">请连接wifi</string>
    <string name="lamp_detatl">设备详情</string>
    <string name="lamp_type">型号：L7f</string>
    <string name="lamp_name">落地灯</string>
    <string name="bind_date">绑定日期：2017-03-05</string>
    <string name="remark_name">备注名称</string>
    <string name="after_service">售后服务</string>
    <string name="lamp_version">固件版本</string>
    <string name="lamp_version_name">1.0.0</string>
    <string name="connected">已连接</string>
    <string name="connectnot">未连接</string>
    <string name="search">搜索</string>
    <string name="search_get_device">搜索到的设备</string>
    <string name="text_light_on">开灯</string>
    <string name="text_light_light">亮度</string>
</resources>