<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:igoo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLove"
    android:orientation="vertical">

    <com.grandar.igoo.igooproject.view.TopView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        igoo:title="@string/lamp_detatl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launch" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lamp_detail_text_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/lamp_name"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/lamp_detail_text_sn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/lamp_type"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_15sp" />

            <TextView
                android:id="@+id/lamp_detail_text_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/bind_date"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shadow_bg_white"
        android:orientation="vertical">

        <com.grandar.igoo.igooproject.view.CommonItemView
            android:id="@+id/lamp_detail_view_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:onClick="rename"
            igoo:subhead="@string/lamp_name"
            igoo:title="@string/remark_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/whiteLineColor"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:text="@string/test_phone"
                android:textSize="@dimen/text_size_15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:text="@string/after_service"
                android:textColor="@color/whiteTitleColor"
                android:textSize="@dimen/text_size_16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/whiteLineColor"/>

        <RelativeLayout
            android:background="@drawable/shadow_bg_white"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:text="@string/lamp_version_name"
                android:textSize="@dimen/text_size_15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:text="@string/lamp_version"
                android:textColor="@color/whiteTitleColor"
                android:textSize="@dimen/text_size_16sp" />
        </RelativeLayout>


    </LinearLayout>
    <Button
        android:id="@+id/lamp_detail_btn_delete"
        style="@style/common_btn_white"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/margin_12dp"
        android:layout_marginRight="@dimen/margin_12dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="bind"
        android:text="@string/deltedevice"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17sp" />
</LinearLayout>