<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:igoo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@mipmap/topbackground">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:background="@mipmap/toptitlebg"
            android:orientation="horizontal">

            <Button
                android:id="@+id/singlecontrol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:gravity="center"
                android:shadowColor="#f1f1f1"
                android:text="@string/singlecontrol" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@mipmap/vline" />

            <Button
                android:id="@+id/autom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:gravity="center"
                android:shadowColor="#f1f1f1"
                android:text="@string/automatic" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@mipmap/vline" />

            <Button
                android:id="@+id/manul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="#787878"
                android:gravity="center"
                android:shadowColor="#f1f1f1"
                android:text="@string/manual" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
